--- a/index (4).html
+++ b/index (4).html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Sir Tim Berners-Lee</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style(3).css">
     <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -24,7 +24,7 @@
     </center>
     <section id="welcome">
         <div class="parallax-inner">
-            <img src="stbl.jpg" class="profile" />
+            <img src="stbl(3).jpg" class="profile" />
             <h1>Eu sou <br><span id="name">Tim Berners-Lee</span></h1>
             <h2> Sou o fundador da www: World Wide Web</h2>
         </div>
